# tara

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build.zig  wrapper.h  zig.LICENSE
docs/: draft.txt  grammar.txt  language.txt  requirements.txt
docs/asyn/: Asyn.tex
src/: Ast.zig  Parser.zig  UTir.zig  UTirGen.zig  arena.rs  ast.rs  ast_codegen.rs  auto_indenting_stream.rs  builtin.rs  c.zig  circt.rs  codegen.rs  comp.rs  intern.rs  main.rs  main.zig  module.rs  parser.rs  parser_test.zig  sema.rs  syntax.pest  tables.rs  tir.rs  tokenize.zig  tokenize_test.zig  types.rs  utils.rs  utils.zig  utir.rs  utirgen_test.zig  values.rs
src/ast_codegen/: error.rs  table.rs
src/circt/: c.zig  seq.rs
src/circt/dialect/: Comb.zig
src/codegen/: error.rs  package.rs  tld.rs
src/mlir/: IR.zig  attribute.zig  c.zig  support.zig  type.zig
src/mlir/dialect/: arith.zig  func.zig
src/module/: comb.rs  decls.rs  file.rs  function.rs  namespace.rs  register.rs  structs.rs  tmodule.rs  variable.rs
src/tir/: error.rs  inst.rs  sema.rs
src/utils/: arena.rs  id_arena.rs  slice.rs
src/utir/: builder.rs  error.rs  inst.rs
test/: expr0.t  expr1.t  expressions.t  mod_with_comb.t  struct_with_fn.t  test0.t  test1.t  test_mod.t  test_struct.t  types.t
tests/: test.rs
tests/mlir/: butterfly_fft.t  comb.t  containers.t  counter.t  if.t  locals.t  mod.t  ops.t  register.t  type_check.t  unexpected_control_flow.t  unreachable_block.t
tests/mlir/errors/: reg_multiple_write.t  reg_no_write.t  unexpected_control_flow.t  unreachable_block.t  wrong_type.t
tests/parser/: comb_fn_with_locals.t  complex_expression.t  complex_expression_with_parens.t  empty_file.t  empty_struct.t  expr0.t  expr1.t  expressions.t  half_adder.t  mod_with_comb.t  struct_with_fn.t  test0.t  test1.t  test_empty_struct.t  test_mod.t  test_struct.t  types.t
tests/tir/: butterfly_fft.t  counter.t  half_add.t  mod_with_comb.t  sw_mlir.t
tests/utir/: comb_fn_with_locals.t  complex_expression.t  complex_expression_with_parens.t  detect_shadowing.t  detect_unknown_identifier.t  empty_file.t  empty_struct.t  expr0.t  expr1.t  expressions.t  half_adder.t  mod_with_comb.t  struct_with_fn.t  test_mod.t  test_struct.t  types.t
