[package]
name = "tara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
miette = "5.10.0"
pest = "2.7.6"
pest_consume = "1.1.3"
lazy_static = "1.4.0"
symbol_table = { version = "0.3.0", features = ["global"] }
num-bigint = "0.4.4"
bincode = "1.3.3"
indenter = "0.2"
num-traits = "0.2.18"

[dev-dependencies]
lit = "0.3.4"
