[package]
name = "tara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
pest = "2.7.6"
pest_consume = "1.1.3"
lazy_static = "1.4.0"
symbol_table = { version = "0.3.0", features = ["global"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
kioku = { git = "https://github.com/devins2518/kioku.git" }
melior = { version = "0.16.2", features = ["llvm-trunk", "ods-dialects"], default-features = false }
melior-macro = { version = "0.10.2", features = ["llvm-trunk"], default-features = false }
tblgen = { version = "0.3.0", features = ["llvm-trunk"], default-features = false }
mlir-sys = { version = "0.2.1", features = ["llvm-trunk"], default-features = false }
log = "0.4.21"
simple_logger = "4.3.3"
quickscope = "0.2.0"

[patch.crates-io]
melior = { git = "https://github.com/mikeurbach/melior.git", package = "melior", branch = "mikeurbach/latest-mlir" }
melior-macro = { git = "https://github.com/mikeurbach/melior.git", package = "melior-macro", branch = "mikeurbach/latest-mlir" }
tblgen = { git = "https://gitlab.com/mikeurbach/tblgen-rs.git", branch = "mikeurbach/latest-mlir" }
mlir-sys = { git = "https://github.com/mikeurbach/mlir-sys.git", branch = "mikeurbach/latest-mlir" }

[dev-dependencies]
lit = "0.3.4"

[build-dependencies]
bindgen = "0.69.4"
